force-app/main/default/objects/SteelGradeVariant__mdt/SteelGradeVariant__mdt.object-meta.xml
<CustomObject>
    <label>SteelGradeVariant</label>
    <pluralLabel>SteelGradeVariant</pluralLabel>
</CustomObject>