force-app/main/default/objects/SteelGradeVariant__mdt/fields/CanonicalGrade__c.field-meta.xml
<CustomField>
    <fullName>CanonicalGrade__c</fullName>
    <label>CanonicalGrade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>