force-app/main/default/objects/SteelGradeVariant__mdt/fields/VariantRegex__c.field-meta.xml
<CustomField>
    <fullName>VariantRegex__c</fullName>
    <label>VariantRegex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>